<resources>
    <string name="app_name">Notes</string>
    <string name="the_email_can_t_be_blank">The email can\'t be blank</string>
    <string name="that_s_not_a_valid_email">That\'s not a valid email</string>
    <string name="the_username_can_t_be_blank">The username can\'t be blank</string>
    <string name="the_password_can_t_be_blank">The password can\'t be blank</string>
    <string name="the_password_need_to_consist_of_at_least_8_characters">The password need to consist of at least 8 characters</string>
    <string name="the_password_must_have_1_special_character_1_number_1_uppercase_and_1_lowercase_character">the password must have 1 special character 1 number 1 uppercase and 1 lowercase character</string>
    <string name="the_confirm_password_can_t_be_blank">The confirm password can\'t be blank</string>
    <string name="the_passwords_don_t_match">The passwords don\'t match</string>
    <string name="don_t_have_an_account">"Don't have an account? "</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="please_enter_your_details_to_register">Please enter your details to register</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="login">Login</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="user_registered_successfully">User registered successfully</string>
    <string name="please_enter_your_details_to_login">Please enter your details to login</string>
    <string name="user_login">User Login</string>
    <string name="email">Email</string>
    <string name="user_logged_in_successfully">User logged in successfully</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="app_logo">App Logo</string>
    <string name="note_list">Note List</string>
    <string name="search_icon">Search Icon</string>
    <string name="logout">Logout</string>
    <string name="add_note">Add Note</string>
    <string name="this_field_cannot_be_empty">This field cannot be empty</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="back_navigation">Back Navigation</string>
    <string name="note_details">Note Details</string>
    <string name="published_on">"Published on: "</string>
    <string name="edit_note">Edit Note</string>
    <string name="save_note">Save Note</string>
    <string name="note_added_successfully">Note Added Successfully</string>
    <string name="note_edited_successfully">Note Edited Successfully</string>
</resources>