...
        modifier = Modifier
            .verticalScroll(rememberScrollState())
            .imePadding()
    ) {
        LoginGreeting()
        Spacer(Modifier.height(10.dp))
        LoginForm(uiState, onEvent)
    }
}

@Composable
fun LoginGreeting() {
    Text(
...
        ) {
            Text(stringResource(R.string.login))
        }
        Spacer(Modifier.height(20.dp))
        Text(modifier = Modifier
            .align(Alignment.CenterHorizontally)
            .testTag("Goto RegistrationScreen")
            .clickable { onEvent(LoginUIEvent.RegisterTextClicked) },
            text = buildAnnotatedString {
                withStyle(
                    style = SpanStyle(color = MaterialTheme.colorScheme.onSurface)
                ) {
                    append(stringResource(R.string.don_t_have_an_account))
...
