...
        modifier = Modifier
            .fillMaxSize()
            .verticalScroll(rememberScrollState())
    ) {
        RegistrationGreeting()
        Spacer(Modifier.height(10.dp))
        RegistrationForm(uiState, onEvent)
    }

}

@Composable
private fun RegistrationGreeting() {
...
            Text(stringResource(R.string.register))
        }
        Spacer(Modifier.height(20.dp))
        Text(
            modifier = Modifier
                .align(Alignment.CenterHorizontally)
                .testTag("Goto LoginScreen")
                .clickable { onEvent(RegistrationUIEvent.LoginTextClicked) },
            text = buildAnnotatedString {
                withStyle(
                    style = SpanStyle(color = MaterialTheme.colorScheme.onSurface)
                ) {
                    append(stringResource(R.string.already_have_an_account))
...
